--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         </div>
 
         <div class="main">
+            <h1>Tudo sore Spartacus</h1>
             <p>Para tentar contornar os problemas que envolvem uma adaptação histórica, os produtores optaram por tomar liberdades para contar o enredo da série. Desta forma, a trama acompanha o gladiador trácio Espártaco (Andy Whitfield) que é sentenciado à morte numa arena após desafiar o comando de Cláudio Glabro (Craig Parker, O Senhor dos Anéis). Como previsto por Espártaco (e ignorado por Glabro), a vila onde vivia o trácio é atacada por bárbaros, e não há nenhum romano ou homem por perto para defendê-la. Num ato de rebeldia Espártaco retorna para casa e salva sua esposa da morte certa, fugindo com ela logo após, temendo a represália de Glaber. Mas esta não demora. Spartacus é capturado e levado como escravo, tal como Sura, sua esposa, que é separada dele e vendida a mercadores sírios. Ao ser jogado à morte na arena para a diversão da plebe, ele surpreende a todos e vence a disputa, matando quatro gladiadores, demonstrando que não irá morrer enquanto não reencontrar sua esposa.</p>
+
+            <h2>Exibição no Brasil</h2>
+            <p>A partir do dia 7 de agosto de 2011, o Canal FX Brasil começou a exibir a primeira temporada de Spartacus: Viva o Pecado. Em 5 de janeiro de 2014, a estreou na TV aberta, pela Rede Record. No início, causou polêmica o fato da emissora não exibir sangue e sexo, característica da série, o que provocou comentários negativos por parte do público e da imprensa que, a princípio, disse que o canal cortou essas cenas, o que foi desmentindo. A rede afirmou que "foi exibida a versão oferecida pela distribuidora para a televisão aberta". A empresa que distribui Spartacus no [[Brasil }} disse que a Starz produziu um corte soft da série para a TV aberta, com menos sexo e violência. Disponível atualmente para assistir através do streaming Lionsgate+.</p>
         </div>
 
         <div class="anchors">
