--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="main">
-            <h1>Tudo sore Spartacus</h1>
+            <h1>Tudo sobre Spartacus</h1>
             <p>Para tentar contornar os problemas que envolvem uma adaptação histórica, os produtores optaram por tomar liberdades para contar o enredo da série. Desta forma, a trama acompanha o gladiador trácio Espártaco (Andy Whitfield) que é sentenciado à morte numa arena após desafiar o comando de Cláudio Glabro (Craig Parker, O Senhor dos Anéis). Como previsto por Espártaco (e ignorado por Glabro), a vila onde vivia o trácio é atacada por bárbaros, e não há nenhum romano ou homem por perto para defendê-la. Num ato de rebeldia Espártaco retorna para casa e salva sua esposa da morte certa, fugindo com ela logo após, temendo a represália de Glaber. Mas esta não demora. Spartacus é capturado e levado como escravo, tal como Sura, sua esposa, que é separada dele e vendida a mercadores sírios. Ao ser jogado à morte na arena para a diversão da plebe, ele surpreende a todos e vence a disputa, matando quatro gladiadores, demonstrando que não irá morrer enquanto não reencontrar sua esposa.</p>
 
             <h2>Exibição no Brasil</h2>
