--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 
             <h2>Exibição no Brasil</h2>
             <p>A partir do dia 7 de agosto de 2011, o Canal FX Brasil começou a exibir a primeira temporada de Spartacus: Viva o Pecado. Em 5 de janeiro de 2014, a estreou na TV aberta, pela Rede Record. No início, causou polêmica o fato da emissora não exibir sangue e sexo, característica da série, o que provocou comentários negativos por parte do público e da imprensa que, a princípio, disse que o canal cortou essas cenas, o que foi desmentindo. A rede afirmou que "foi exibida a versão oferecida pela distribuidora para a televisão aberta". A empresa que distribui Spartacus no [[Brasil }} disse que a Starz produziu um corte soft da série para a TV aberta, com menos sexo e violência. Disponível atualmente para assistir através do streaming Lionsgate+.</p>
+            <figure>
+                <img src="assets/images/SpartacusBloodandSand.jpg" alt="Aparece na abertura da série">
+                <figcaption>Aparece na abertura da série</figcaption>
+            </figure>
+            
         </div>
 
         <div class="anchors">
