--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div>   
         <div class="logo">
-            <img src="assets/images/logo.png" width="100"/>
+            <img src="assets/images/logo.png" width="100" alt="Logotipo"/>
         </div>
     </div>
 
