--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="sidebar">
             <h2>Série de TV</h2>
             <ul>
-                <li><a href="#">Spartacus: Blood and Sand</a></li>
+                <li><a href="https://veja.abril.com.br/coluna/temporadas/spartacus-blood-and-sand-chega-ao-brasil">Spartacus: Blood and Sand</a></li>
             </ul>
         </div>
 
