--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="anchors">
             <h2>Neste Artigo</h2>
             <ul>
-                <li><a href="#">Âncoras</a></li>
+                <li><a href="https://sscastilho.github.io/trilha-html-modulo-3/">Exibição no Brasil</a></li>
             </ul>
         </div>
     </div>
