--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <h2>Série de TV</h2>
             <ul>
                 <li><a href="https://veja.abril.com.br/coluna/temporadas/spartacus-blood-and-sand-chega-ao-brasil">Spartacus: Blood and Sand</a></li>
+                <li><a href="https://www.imdb.com/title/tt0944947/">Game of Thrones</a></li>
+                <li><a href="https://www.imdb.com/title/tt4574334/">Stranger Things</a></li>
+                <li><a href="https://www.imdb.com/title/tt7366338/">Chernobyl</a></li>
+                <li><a href="https://www.imdb.com/title/tt10986410/">Ted Lasso</a></li>
             </ul>
         </div>
 
