--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="footer">
-        <p>Desenvolvido por [Seu Nome]</p>
+        <p>Desenvolvido por Sullivan Castilho</p>
     </div>
 </body>
 </html>
